<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="etSearchQuery">Enter image search</string>
    <string name="search">Search</string>
    <string name="title_activity_change_settings">ChangeSettingsActivity</string>
    <string name="advanced_search_options">Advanced search options</string>
    <string name="search_option_image_size">Image Size</string>
    <string name="search_option_color_filter">Color Filter</string>
    <string name="search_option_image_type">Image Type</string>
    <string name="search_option_site_filter">Site Filter</string>
    <string name="change_settings">Change Settings</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
	
	<string-array name="size_array">
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    
	<string-array name="color_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
	<string-array name="type_array">
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="save">Save</string>
    
</resources>
